# bugpilot

./: .env  .env.example  .gitignore  Makefile  README.md  components.json  docker-compose.yml  index.html  install.sh  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  auth.py  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/api/: connectors.py  health.py  history.py  investigations.py  keys.py  reports.py  triggers.py  webhooks.py
backend/app/: auth.py  main.py
backend/connectors/: registry.py
backend/services/: nlp.py  org.py  queue.py  secrets.py
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_db_down_503.py  test_dedup.py  test_hypothesis_ranker.py  test_nlp.py  test_pii_scrubber.py  test_privacy.py
backend/worker/: graph_builder.py  hypothesis_ranker.py  llm_client.py  main.py  notifier.py  orchestrator.py
cli/: go.mod  go.sum  install.ps1  install.sh  main.go
cli/bugpilot/: main.py
cli/cmd/: connect.go  history.go  init.go  investigate.go  report.go  root.go  update.go  version.go
connectors/: registry.py
docs/: api-reference.md  architecture.md  cli-reference.md  connectors.md  developer_setup.md  getting-started.md  how-to-investigate.md  how-to-rbac.md  how-to-retention.md  how-to-webhooks.md  index.md  troubleshooting.md
frontend/: App.tsx  components.json  index.css  index.html  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: setup.py
src/: App.tsx  index.css
src/cli/: README.md  bugpilot.spec  mock_server.py  pyproject.toml
src/cli/bugpilot/: __init__.py  config_loader.py  context.py  main.py  session.py
src/cli/bugpilot/auth/: client.py
src/cli/bugpilot/commands/: ask_cmd.py  auth_cmd.py  compare_cmd.py  config_cmd.py  connector_cmd.py  evidence_cmd.py  export_cmd.py  export_helpers.py  fix_cmd.py  history_cmd.py  hypotheses_cmd.py  incident_cmd.py  investigate_cmd.py  investigation_cmd.py  license_cmd.py  resolve_cmd.py  summary_cmd.py  timeline_cmd.py
src/cli/bugpilot/output/: human.py  verbose.py
src/cli/tests/: conftest.py  test_smoke.py  test_version.py
supabase/: config.toml
worker/: main.py  requirements.txt
(+205 files in other folders)
