[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bugpilot"
version = "0.1.0"
description = "BugPilot CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dateutil>=2.9.0",
    "anyio>=4.3.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
bugpilot = "bugpilot.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
